fixed wrong alignment

--- a/src/targets/meandall/styles/views/reservation.less
+++ b/src/targets/meandall/styles/views/reservation.less
@@ -661,6 +661,9 @@ reservation-hotel-details {
           color: #aaa;
         }
       }
+      .table-expand {
+        min-width: 106px;
+      }
       .breakdown-toggle {
         width: 100%;
         padding: 0 20px;
